fixed bug on css table cell for textAlign

--- a/src/scss/table.scss
+++ b/src/scss/table.scss
@@ -45,8 +45,6 @@
   }
 
   .cell {
-    position: relative;
-    display: flex;
     min-width: 40px;
     padding: 5px;
     width: $cell-width;
